do: adding approval informations, optimising RegexHelper